<resources>
    <string name="app_name">QuizVVV2.0</string>

    <string name="question_text1">0.New-York the capital of USA</string>
    <string name="question_text2">1.london the capital of Ukraine</string>
    <string name="question_text3">2.Washington the capital of UsA</string>
    <string name="question_text4">3.Kyiv the capital of Ukraine</string>

    <string name="true_button">True</string>
    <string name="false_button">False</string>

    <string name="next_guestion_button">Next</string>
    <string name="prev_guestion_button">Previous</string>

    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>

    <string name="cheat_button">Cheat!</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="judgment_toast">Cheating is wrong :)</string>


</resources>
